# NetSim

./: .gitignore  CMakeLists.txt  README.md
include/: config.hpp  factory.hpp  helpers.hpp  nodes.hpp  package.hpp  reports.hpp  simulation.hpp  storage_types.hpp  types.hpp
mocks/: nodes_mocks.hpp
src/: factory.cpp  main.cpp  nodes.cpp  package.cpp  storage_types.cpp
test/: test.cpp
